test/parser/fail/noexprexst.ang
f : exists ( n:Nat ; )
f = ?